--- a/toc.yml
+++ b/toc.yml
@@ -14,6 +14,9 @@ items:
       tocHref: /dotnet/standard/
       topicHref: /dotnet/standard/index
       items:
+      - name: 오픈 소스 라이브러리 지침
+        tocHref: /dotnet/standard/library-guidance/
+        topicHref: /dotnet/standard/library-guidance/index
       - name: 현대식 ASP.NET 웹 응용 프로그램 전자책
         tocHref: /dotnet/standard/modern-web-apps-azure-architecture/
         topicHref: /dotnet/standard/modern-web-apps-azure-architecture/index
@@ -610,9 +613,9 @@ items:
       - name: 자습서
         tocHref: /dotnet/machine-learning/tutorials/
         topicHref: /dotnet/machine-learning/tutorials/index
-ms.openlocfilehash: 7afc52cf67461924d6d334bb00674b0b70e97eac
-ms.sourcegitcommit: 8c28ab17c26bf08abbd004cc37651985c68841b8
+ms.openlocfilehash: d63e7873e2e06d383e16b598e795545a2eb54777
+ms.sourcegitcommit: d88024e6d6d8b242feae5f4007a709379355aa24
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 10/07/2018
-ms.locfileid: "48846307"
+ms.lasthandoff: 10/16/2018
+ms.locfileid: "49337573"
