--- a/docs/csharp/tutorials/intro-to-csharp/hello-world.yml
+++ b/docs/csharp/tutorials/intro-to-csharp/hello-world.yml
@@ -11,12 +11,12 @@ metadata:
   displayType: two-column
   interactive: csharp
   ms.custom: mvc
-  ms.openlocfilehash: d9992c65b2f5f0f73af9f3234ac389b1c8647337
-  ms.sourcegitcommit: c93fd5139f9efcf6db514e3474301738a6d1d649
+  ms.openlocfilehash: 7d6029e48c67259dc2fb28151196223f2490962f
+  ms.sourcegitcommit: 35316b768394e56087483cde93f854ba607b63bc
   ms.translationtype: HT
   ms.contentlocale: ko-KR
-  ms.lasthandoff: 10/28/2018
-  ms.locfileid: "50200180"
+  ms.lasthandoff: 11/26/2018
+  ms.locfileid: "52297051"
 items:
 - durationInMinutes: 1
   content: >
@@ -98,10 +98,4 @@ items:
     > [!NOTE]
 
     > 이 온라인 코딩 환경은 미리 보기 모드로 제공됩니다. 문제가 발생하면 [dotnet/try 리포지토리](https://github.com/dotnet/try/issues)에 보고하세요.
-- content: >-
-    “Hello C#” C# 소개 자습서를 완료했습니다.
-
-
-    [C# 프로그래밍 가이드](../../programming-guide/index.md)의 [문자열](../../programming-guide/strings/index.md) 항목에서 `string` 형식 작업에 대해 더 자세히 학습할 수 있습니다.
-
-    [문자열 작업에 대한 방법 팁](../../how-to/index.md#working-with-strings).
+- content: "“Hello C#” C# 소개 자습서를 완료했습니다. 아래 **C#** 링크에서 번호를 클릭하여 다음 대화형 자습서를 시작하거나, [.NET 사이트](https://www.microsoft.com/net/learn/dotnet/hello-world-tutorial)에서 .NET Core SDK를 다운로드하고 머신에 프로젝트를 만들고 계속 코딩할 수 있습니다. \"계속 학습\" 단계에서 이 자습서를 다시 제공합니다.\n\n`string` 형식에서 추가 정보:\n- [문자열](../../programming-guide/strings/index.md)에서 [C# 프로그래밍 가이드](../../programming-guide/index.md) 토픽. \n- [문자열 작업에 대한 방법 팁](../../how-to/index.md#working-with-strings)."
