--- a/toc.yml
+++ b/toc.yml
@@ -110,9 +110,6 @@ items:
       - name: 애플리케이션 도메인 및 어셈블리
         tocHref: /dotnet/framework/app-domains/
         topicHref: /dotnet/framework/app-domains/index
-      - name: 일반 클라이언트 기술
-        tocHref: /dotnet/framework/common-client-technologies/
-        topicHref: /dotnet/framework/common-client-technologies/index
       - name: 구성 파일을 사용하여 앱 구성
         tocHref: /dotnet/framework/configure-apps/
         topicHref: /dotnet/framework/configure-apps/index
@@ -165,7 +162,7 @@ items:
           tocHref: /dotnet/framework/data/adonet/
           topicHref: /dotnet/framework/data/adonet/index
           items:
-          - name: DataSet, DataTable 및 DataView
+          - name: DataSets, DataTables 및 DataViews
             tocHref: /dotnet/framework/data/adonet/dataset-datatable-dataview/
             topicHref: /dotnet/framework/data/adonet/dataset-datatable-dataview/index
           - name: ADO.NET Entity Framework
@@ -613,9 +610,9 @@ items:
       - name: 자습서
         tocHref: /dotnet/machine-learning/tutorials/
         topicHref: /dotnet/machine-learning/tutorials/index
-ms.openlocfilehash: 59b58c95a40b2db2a5cb9da50ad4bec96e9f782c
-ms.sourcegitcommit: 3b9b7ae6771712337d40374d2fef6b25b0d53df6
+ms.openlocfilehash: fa81883a0229859aa78d0775122e492951f99f10
+ms.sourcegitcommit: 75567a3cb437009db55949c6092f4e77ed1a9da4
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/04/2019
-ms.locfileid: "54030037"
+ms.lasthandoff: 01/15/2019
+ms.locfileid: "54307346"
